2003-11-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-pop-up-windows): Default to t.
	(w3m-pop-up-window-p): New macro examining the value for the
	`w3m-use-tab' variable and the present situation.
	(w3m-copy-buffer): Use it.

	* shimbun/shimbun.el (shimbun-header-insert): Use `functionp'
	instead of `fboundp' to eximine the value for the
	`shimbun-x-face-database-function' variable.

2003-11-04  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-meta-content-type-charset-regexp)
	(w3m-meta-charset-content-type-regexp)
	(w3m-meta-refresh-content-regexp)
	(w3m-meta-content-refresh-regexp): Allow `\n' as whitespaces.

2003-10-31  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-hist.el (w3m-history-backward): Return the current history
	if the number zero is given as an argument.

2003-10-29  OHASHI Akira  <bg66@koka-in.org>

	* w3m.el (w3m-process-connection-type): Set t when system is
	darwin version 7.0.0 or later.

2003-10-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-fontify-strike-through (var)): Make it into the
	variable which is not a user option.
	(w3m-fontify-strike-through (fn)): Check dynamically whether the
	window system is used.
	(w3m-url-at-point): Unify iso646 chars to ascii on XEmacs-mule.

	* mew-w3m.el: Silence the compile warning for `mew-coding-system-p'
	for people having the Mew XEmacs package installed.

2003-10-24  MIYOSHI Masanori  <miyoshi@boreas.dti.ne.jp>

	* shimbun/sb-2ch.el (shimbun-2ch-request-article): Use
	shimbun-header-number() instead of aref().
	(shimbun-headers)[shimbun-2ch]: Ditto.

	* shimbun/shimbun.el (shimbun-header-number): New function.
	(shimbun-header-set-number): Ditto.

2003-10-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-obey-w3m-pop-up-frames): New variable.
	(w3m-copy-buffer): Inherit the value of `w3m-initial-frame' into
	the new buffer if a new frame is not created for the new buffer.
	(w3m-delete-frame-maybe): Simplify it in the different way.
